--- a/$1recognizer/nbproject/private/private.properties
+++ b/$1recognizer/nbproject/private/private.properties
@@ -8,4 +8,5 @@ auxiliary.org-nbheaven-sqe-tools-pmd-codedefects-core.annotateProjectResultEnabl
 auxiliary.org-nbheaven-sqe-tools-pmd-codedefects-core.backgroundScanningEnabled=true
 auxiliary.org-nbheaven-sqe-tools-pmd-codedefects-core.enabled=true
 compile.on.save=true
-user.properties.file=C:\\Users\\givelpa\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.ivy.jar=E:\\silmathoron\\interaction_multimodale\\ivy.jar
+user.properties.file=E:\\silmathoron\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
